<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TextbookWebView</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="number_one">1</string>
    <string name="number_two">2</string>    
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>
    <string name="number_dot">\u2190</string>
    <string name="number_clear">清除</string>
    <string name="self_rating_done">确定</string>
    <string name="self_rating_cancle">取消</string>
    <string name="max_score">最大分值</string>  
    <string name="txt_analysis">解析</string>
    
    <string name="sound_loading_error">音频加载错误</string>
    <string name="sound_loading">音频加载中....请稍候</string>
    <string name="sound_loading_timeout_error">音频加载错误,请检查网络是否通畅</string>

</resources>
