<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7f000000">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:orientation="vertical" >
            
            <TextView
                android:id="@+id/self_rating_score" 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:maxLength="2"
                android:background="@drawable/self_rating_plan_score_shape"
                android:textSize="20sp"/>

        </LinearLayout>
        
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp">

                    <Button
                        android:id="@+id/number_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/self_rating_number_selector"
                        android:text="@string/number_one" />

                    <Button
                        android:id="@+id/number_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/self_rating_number_selector"
                        android:layout_marginLeft="12dp"
                        android:text="@string/number_two" />

                    <Button
                        android:id="@+id/number_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/self_rating_number_selector"
                        android:layout_marginLeft="12dp"
                        android:text="@string/number_three" />

                    <Button
                        android:id="@+id/number_four"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/self_rating_number_selector"
                        android:layout_marginLeft="12dp"
                        android:text="@string/number_four" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp" >
                    
                    <Button
                        android:id="@+id/number_five"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/self_rating_number_selector"
                        android:text="@string/number_five" />

                    <Button
                        android:id="@+id/number_six"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/self_rating_number_selector"
                        android:layout_marginLeft="12dp"
                        android:text="@string/number_six" />

                    <Button
                        android:id="@+id/number_seven"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/self_rating_number_selector"
                        android:layout_marginLeft="12dp"
                        android:text="@string/number_seven" />

                    <Button
                        android:id="@+id/number_eight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/self_rating_number_selector"
                        android:layout_marginLeft="12dp"
                        android:text="@string/number_eight" />
                    
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp" >
                    
                    <Button
                        android:id="@+id/number_nine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/self_rating_number_selector"
                        android:text="@string/number_nine" />

                    <Button
                        android:id="@+id/number_zero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/self_rating_number_selector"
                        android:layout_marginLeft="12dp"
                        android:text="@string/number_zero" />

                    <Button
                        android:id="@+id/number_dot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/self_rating_number_selector"
                        android:layout_marginLeft="12dp"
                        android:text="@string/number_dot" />

                    <Button
                        android:id="@+id/number_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/self_rating_plan_clear_shape_selector"
                        android:layout_marginLeft="12dp"
                        android:text="@string/number_clear" />
                    
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                    
                    <Button
                        android:id="@+id/self_rating_done"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:background="@drawable/self_rating_plan_btn_selector"
                        android:textColor="@android:color/white"
                        android:text="@string/self_rating_done" />

                    <Button
                        android:id="@+id/self_rating_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:background="@drawable/self_rating_plan_btn_selector"
                        android:textColor="@android:color/white"
                        android:layout_marginLeft="12dp"
                        android:text="@string/self_rating_cancle" />
                    
                </TableRow>
            </TableLayout>
                 
    </LinearLayout>

</RelativeLayout>
